<resources>
    <string name="app_name">PhoneMithra</string>
    <string name="login_email">Enter your email</string>
    <string name="login_password">Enter your password</string>
    <string name="login_button">Login</string>
    <string name="login_register">Don\'t have an account? Register here</string>

    <string name="register_title">Create Account</string>
    <string name="register_name">Full Name</string>
    <string name="register_email">Email id</string>
    <string name="register_phone">Phone number</string>
    <string name="register_recov_phone">Recovery number</string>
    <string name="register_password">Create new password</string>
    <string name="register_passwordc">Confirm new password</string>
    <string name="register_passcode">Enter a 4 digit passcode</string>
    <string name="register_button">Register</string>
    <string name="register_login">Already have an account? Login here</string>

    <string name="button_location">Location</string>
    <string name="button_contact">Contact</string>
    <string name="button_sound">Sound Profile</string>
    <string name="button_lock">Screen Lock</string>
    <string name="homeWelcome">Welcome,</string>

    <string name="profileTerms">Terms &amp; Conditions</string>

    <string name="location_desc">This feature of the app will help you to locate your phone anytime by just sending a text message. You need to give the location permission for the proper functioning of this feature. The format of the text message is as shown</string>
    <string name="location_format">&quot;phonemithra &lt;your 4 digit secret pin&gt; location&quot;</string>
    <string name="permission">Give permission</string>
    <string name="contact_desc">This feature of the app will help you to access any contact on your device remotely by just sending a text message. You need to give the contact permission for the proper functioning of this feature. The format of the text message is as shown</string>
    <string name="contact_format">&quot;phonemithra &lt;your 4 digit secret pin&gt;\n contact &lt;contact name&gt;&quot;</string>
    <string name="sound_desc">This feature of the app will help you to change the sound profile of your device remotely by just sending a text message in the below given format. This feature does not need any permission for its functioning.</string>
    <string name="sound_format">&quot;phonemithra &lt;your 4 digit secret pin&gt;\n change sound profile&quot;</string>
    <string name="lock_desc">This feature of the app will help you to lock your device remotely by just sending a text message. You need to give the device admin permission for the proper functioning of this feature. The format of the text message is as shown</string>
    <string name="lock_format">&quot;phonemithra &lt;your 4 digit secret pin&gt; lock&quot;</string>
</resources>